data/diff_tests/wasmtime/block_IncorrectHandlingofControlFlowAcrossModuleBoundaries_104.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\85\80\80\80\00\01\60"
    "\00\01\7f\02\90\80\80\80\00\01\03\65\6e\76\08\63"
    "\61\6c\6c\62\61\63\6b\00\00\03\82\80\80\80\00\01"
    "\00\0a\94\80\80\80\00\01\8e\80\80\80\00\00\02\7f"
    "\41\01\10\00\6a\41\02\0c\00\0b\0b"
  )
""
)